web/geapp/src/main/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cr5-web-v2-static
spec:
  type: ClusterIP
  selector:
    app: cr5-web-v2
  ports:
    - protocol: TCP
      port: 80
